--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
+        "pestphp/pest": "^1.8",
+        "phpunit/phpunit": "^9.5",
         "symfony/maker-bundle": "^1.32",
         "symfony/stopwatch": "^5.3",
         "symfony/web-profiler-bundle": "^5.3"
