--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,15 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
+        "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.3.*",
         "symfony/console": "5.3.*",
+        "symfony/css-selector": "5.3.*",
         "symfony/dotenv": "5.3.*",
         "symfony/flex": "^1.3.1",
         "symfony/form": "5.3.*",
         "symfony/framework-bundle": "5.3.*",
+        "symfony/phpunit-bridge": "^5.3",
         "symfony/proxy-manager-bridge": "5.3.*",
         "symfony/runtime": "5.3.*",
         "symfony/security-bundle": "5.3.*",
@@ -28,7 +32,6 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "pestphp/pest": "^1.8",
-        "phpunit/phpunit": "^9.5",
         "symfony/maker-bundle": "^1.32",
         "symfony/stopwatch": "^5.3",
         "symfony/web-profiler-bundle": "^5.3"
